tmp/obj/usr/local/poudriere/jails/exprossobin_v2_4_4_amd64/usr/src/usr.bin/iscsictl/y.output
   0  $accept : targets $end

   1  targets :
   2          | targets target

   3  target : STR OPENING_BRACKET target_entries CLOSING_BRACKET

   4  target_entries :
   5                 | target_entries target_entry
   6                 | target_entries target_entry SEMICOLON

   7  target_entry : target_name
   8               | target_address
   9               | initiator_name
  10               | initiator_address
  11               | initiator_alias
  12               | user
  13               | secret
  14               | mutual_user
  15               | mutual_secret
  16               | auth_method
  17               | header_digest
  18               | data_digest
  19               | session_type
  20               | enable
  21               | offload
  22               | protocol
  23               | ignored

  24  target_name : TARGET_NAME EQUALS STR

  25  target_address : TARGET_ADDRESS EQUALS STR

  26  initiator_name : INITIATOR_NAME EQUALS STR

  27  initiator_address : INITIATOR_ADDRESS EQUALS STR

  28  initiator_alias : INITIATOR_ALIAS EQUALS STR

  29  user : USER EQUALS STR

  30  secret : SECRET EQUALS STR

  31  mutual_user : MUTUAL_USER EQUALS STR

  32  mutual_secret : MUTUAL_SECRET EQUALS STR

  33  auth_method : AUTH_METHOD EQUALS STR

  34  header_digest : HEADER_DIGEST EQUALS STR

  35  data_digest : DATA_DIGEST EQUALS STR

  36  session_type : SESSION_TYPE EQUALS STR

  37  enable : ENABLE EQUALS STR

  38  offload : OFFLOAD EQUALS STR

  39  protocol : PROTOCOL EQUALS STR

  40  ignored : IGNORED EQUALS STR

state 0
	$accept : . targets $end  (0)
	targets : .  (1)

	.  reduce 1

	targets  goto 1


state 1
	$accept : targets . $end  (0)
	targets : targets . target  (2)

	$end  accept
	STR  shift 2
	.  error

	target  goto 3


state 2
	target : STR . OPENING_BRACKET target_entries CLOSING_BRACKET  (3)

	OPENING_BRACKET  shift 4
	.  error


state 3
	targets : targets target .  (2)

	.  reduce 2


state 4
	target : STR OPENING_BRACKET . target_entries CLOSING_BRACKET  (3)
	target_entries : .  (4)

	.  reduce 4

	target_entries  goto 5


state 5
	target : STR OPENING_BRACKET target_entries . CLOSING_BRACKET  (3)
	target_entries : target_entries . target_entry  (5)
	target_entries : target_entries . target_entry SEMICOLON  (6)

	AUTH_METHOD  shift 6
	ENABLE  shift 7
	HEADER_DIGEST  shift 8
	DATA_DIGEST  shift 9
	TARGET_NAME  shift 10
	TARGET_ADDRESS  shift 11
	INITIATOR_NAME  shift 12
	INITIATOR_ADDRESS  shift 13
	INITIATOR_ALIAS  shift 14
	USER  shift 15
	SECRET  shift 16
	MUTUAL_USER  shift 17
	MUTUAL_SECRET  shift 18
	SESSION_TYPE  shift 19
	PROTOCOL  shift 20
	OFFLOAD  shift 21
	IGNORED  shift 22
	CLOSING_BRACKET  shift 23
	.  error

	target_entry  goto 24
	target_name  goto 25
	target_address  goto 26
	initiator_name  goto 27
	initiator_address  goto 28
	initiator_alias  goto 29
	user  goto 30
	secret  goto 31
	mutual_user  goto 32
	mutual_secret  goto 33
	auth_method  goto 34
	header_digest  goto 35
	data_digest  goto 36
	session_type  goto 37
	enable  goto 38
	offload  goto 39
	protocol  goto 40
	ignored  goto 41


state 6
	auth_method : AUTH_METHOD . EQUALS STR  (33)

	EQUALS  shift 42
	.  error


state 7
	enable : ENABLE . EQUALS STR  (37)

	EQUALS  shift 43
	.  error


state 8
	header_digest : HEADER_DIGEST . EQUALS STR  (34)

	EQUALS  shift 44
	.  error


state 9
	data_digest : DATA_DIGEST . EQUALS STR  (35)

	EQUALS  shift 45
	.  error


state 10
	target_name : TARGET_NAME . EQUALS STR  (24)

	EQUALS  shift 46
	.  error


state 11
	target_address : TARGET_ADDRESS . EQUALS STR  (25)

	EQUALS  shift 47
	.  error


state 12
	initiator_name : INITIATOR_NAME . EQUALS STR  (26)

	EQUALS  shift 48
	.  error


state 13
	initiator_address : INITIATOR_ADDRESS . EQUALS STR  (27)

	EQUALS  shift 49
	.  error


state 14
	initiator_alias : INITIATOR_ALIAS . EQUALS STR  (28)

	EQUALS  shift 50
	.  error


state 15
	user : USER . EQUALS STR  (29)

	EQUALS  shift 51
	.  error


state 16
	secret : SECRET . EQUALS STR  (30)

	EQUALS  shift 52
	.  error


state 17
	mutual_user : MUTUAL_USER . EQUALS STR  (31)

	EQUALS  shift 53
	.  error


state 18
	mutual_secret : MUTUAL_SECRET . EQUALS STR  (32)

	EQUALS  shift 54
	.  error


state 19
	session_type : SESSION_TYPE . EQUALS STR  (36)

	EQUALS  shift 55
	.  error


state 20
	protocol : PROTOCOL . EQUALS STR  (39)

	EQUALS  shift 56
	.  error


state 21
	offload : OFFLOAD . EQUALS STR  (38)

	EQUALS  shift 57
	.  error


state 22
	ignored : IGNORED . EQUALS STR  (40)

	EQUALS  shift 58
	.  error


state 23
	target : STR OPENING_BRACKET target_entries CLOSING_BRACKET .  (3)

	.  reduce 3


state 24
	target_entries : target_entries target_entry .  (5)
	target_entries : target_entries target_entry . SEMICOLON  (6)

	SEMICOLON  shift 59
	AUTH_METHOD  reduce 5
	ENABLE  reduce 5
	HEADER_DIGEST  reduce 5
	DATA_DIGEST  reduce 5
	TARGET_NAME  reduce 5
	TARGET_ADDRESS  reduce 5
	INITIATOR_NAME  reduce 5
	INITIATOR_ADDRESS  reduce 5
	INITIATOR_ALIAS  reduce 5
	USER  reduce 5
	SECRET  reduce 5
	MUTUAL_USER  reduce 5
	MUTUAL_SECRET  reduce 5
	SESSION_TYPE  reduce 5
	PROTOCOL  reduce 5
	OFFLOAD  reduce 5
	IGNORED  reduce 5
	CLOSING_BRACKET  reduce 5


state 25
	target_entry : target_name .  (7)

	.  reduce 7


state 26
	target_entry : target_address .  (8)

	.  reduce 8


state 27
	target_entry : initiator_name .  (9)

	.  reduce 9


state 28
	target_entry : initiator_address .  (10)

	.  reduce 10


state 29
	target_entry : initiator_alias .  (11)

	.  reduce 11


state 30
	target_entry : user .  (12)

	.  reduce 12


state 31
	target_entry : secret .  (13)

	.  reduce 13


state 32
	target_entry : mutual_user .  (14)

	.  reduce 14


state 33
	target_entry : mutual_secret .  (15)

	.  reduce 15


state 34
	target_entry : auth_method .  (16)

	.  reduce 16


state 35
	target_entry : header_digest .  (17)

	.  reduce 17


state 36
	target_entry : data_digest .  (18)

	.  reduce 18


state 37
	target_entry : session_type .  (19)

	.  reduce 19


state 38
	target_entry : enable .  (20)

	.  reduce 20


state 39
	target_entry : offload .  (21)

	.  reduce 21


state 40
	target_entry : protocol .  (22)

	.  reduce 22


state 41
	target_entry : ignored .  (23)

	.  reduce 23


state 42
	auth_method : AUTH_METHOD EQUALS . STR  (33)

	STR  shift 60
	.  error


state 43
	enable : ENABLE EQUALS . STR  (37)

	STR  shift 61
	.  error


state 44
	header_digest : HEADER_DIGEST EQUALS . STR  (34)

	STR  shift 62
	.  error


state 45
	data_digest : DATA_DIGEST EQUALS . STR  (35)

	STR  shift 63
	.  error


state 46
	target_name : TARGET_NAME EQUALS . STR  (24)

	STR  shift 64
	.  error


state 47
	target_address : TARGET_ADDRESS EQUALS . STR  (25)

	STR  shift 65
	.  error


state 48
	initiator_name : INITIATOR_NAME EQUALS . STR  (26)

	STR  shift 66
	.  error


state 49
	initiator_address : INITIATOR_ADDRESS EQUALS . STR  (27)

	STR  shift 67
	.  error


state 50
	initiator_alias : INITIATOR_ALIAS EQUALS . STR  (28)

	STR  shift 68
	.  error


state 51
	user : USER EQUALS . STR  (29)

	STR  shift 69
	.  error


state 52
	secret : SECRET EQUALS . STR  (30)

	STR  shift 70
	.  error


state 53
	mutual_user : MUTUAL_USER EQUALS . STR  (31)

	STR  shift 71
	.  error


state 54
	mutual_secret : MUTUAL_SECRET EQUALS . STR  (32)

	STR  shift 72
	.  error


state 55
	session_type : SESSION_TYPE EQUALS . STR  (36)

	STR  shift 73
	.  error


state 56
	protocol : PROTOCOL EQUALS . STR  (39)

	STR  shift 74
	.  error


state 57
	offload : OFFLOAD EQUALS . STR  (38)

	STR  shift 75
	.  error


state 58
	ignored : IGNORED EQUALS . STR  (40)

	STR  shift 76
	.  error


state 59
	target_entries : target_entries target_entry SEMICOLON .  (6)

	.  reduce 6


state 60
	auth_method : AUTH_METHOD EQUALS STR .  (33)

	.  reduce 33


state 61
	enable : ENABLE EQUALS STR .  (37)

	.  reduce 37


state 62
	header_digest : HEADER_DIGEST EQUALS STR .  (34)

	.  reduce 34


state 63
	data_digest : DATA_DIGEST EQUALS STR .  (35)

	.  reduce 35


state 64
	target_name : TARGET_NAME EQUALS STR .  (24)

	.  reduce 24


state 65
	target_address : TARGET_ADDRESS EQUALS STR .  (25)

	.  reduce 25


state 66
	initiator_name : INITIATOR_NAME EQUALS STR .  (26)

	.  reduce 26


state 67
	initiator_address : INITIATOR_ADDRESS EQUALS STR .  (27)

	.  reduce 27


state 68
	initiator_alias : INITIATOR_ALIAS EQUALS STR .  (28)

	.  reduce 28


state 69
	user : USER EQUALS STR .  (29)

	.  reduce 29


state 70
	secret : SECRET EQUALS STR .  (30)

	.  reduce 30


state 71
	mutual_user : MUTUAL_USER EQUALS STR .  (31)

	.  reduce 31


state 72
	mutual_secret : MUTUAL_SECRET EQUALS STR .  (32)

	.  reduce 32


state 73
	session_type : SESSION_TYPE EQUALS STR .  (36)

	.  reduce 36


state 74
	protocol : PROTOCOL EQUALS STR .  (39)

	.  reduce 39


state 75
	offload : OFFLOAD EQUALS STR .  (38)

	.  reduce 38


state 76
	ignored : IGNORED EQUALS STR .  (40)

	.  reduce 40


24 terminals, 22 nonterminals
41 grammar rules, 77 states
